Think I got it the automation compile and minify

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "es6-css-minify.minifyOnSave": "exists"
+    "es6-css-minify.minifyOnSave": "exists",
+    "compile-hero.disable-compile-files-on-did-save-code": false
 }
